<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.fontys.thijsdorssers.dhapp.MainActivity">

    <EditText
        android:id="@+id/idEntry"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/get_by_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getBtn"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:onClick="sendGetRequest"
        android:text="@string/get"
        app:layout_constraintEnd_toStartOf="@+id/idEntry"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="335dp"
        android:layout_height="123dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/out_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:layout_width="366dp"
        android:layout_height="242dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEntry">

        <Button
            android:id="@+id/postBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="sendPostRequest"
            android:text="@string/post" />

        <EditText
            android:id="@+id/editFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/salary"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/delBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:onClick="sendDelRequest"
            android:text="@string/delete" />

        <EditText
            android:id="@+id/editDelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3"
            android:ems="10"
            android:hint="employee id"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/getAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:onClick="getAllRequest"
            android:text="Get all" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
